--- a/canaries/nginxhello-canary.yaml
+++ b/canaries/nginxhello-canary.yaml
@@ -4,7 +4,7 @@ metadata:
   name: nginxhello-canary
   namespace: default
   annotations:
-    fluxcd.io/ignore: "true"
+    fluxcd.io/ignore: "false"
 spec:
   provider: nginx
   targetRef:
@@ -25,7 +25,7 @@ spec:
     maxWeight: 50
     stepWeight: 5
     metrics:
-    - name: request-success-rate
-      thresholdRange:
-        min: 99
-      interval: 1m
+      - name: request-success-rate
+        thresholdRange:
+          min: 99
+        interval: 1m
